--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { version = "1.37.0", features = ["full"] }
 reqwest = {version = "0.12.4", features= ["json"] }
 serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
+base64 = "0.22.1"
